force-app/main/default/objects/Integration_Request_URLs__mdt/Integration_Request_URLs__mdt.object-meta.xml
<CustomObject>
    <description>metadata to store the parameters regarding  endpoint,client secret &amp; client id for external system</description>
    <label>Integration Request URLs</label>
    <pluralLabel>Integration Request URLs</pluralLabel>
</CustomObject>