force-app/main/default/objects/Integration_Request_URLs__mdt/fields/Client_Key__c.field-meta.xml
<CustomField>
    <fullName>Client_Key__c</fullName>
    <description>Value of the Client  Key</description>
    <label>Client Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>