force-app/main/default/objects/Integration_Request_URLs__mdt/fields/Client_Token__c.field-meta.xml
<CustomField>
    <fullName>Client_Token__c</fullName>
    <description>Client Token of the integrated system.</description>
    <label>Client Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>