force-app/main/default/objects/Integration_Request_URLs__mdt/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <description>Content Type which is to be send  the integrated system.</description>
    <label>Content Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>