force-app/main/default/objects/Integration_Request_URLs__mdt/fields/End_Point__c.field-meta.xml
<CustomField>
    <fullName>End_Point__c</fullName>
    <description>End point for the interface</description>
    <label>End Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>