force-app/main/default/objects/Integration_Request_URLs__mdt/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>Method for the Interface for the Integration.</description>
    <label>Method</label>
    <length>155</length>
    <type>Text</type>
</CustomField>