force-app/main/default/objects/Integration_Request_URLs__mdt/listViews/All_w_EndPoints.listView-meta.xml
<ListView>
    <fullName>All_w_EndPoints</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>End_Point__c</columns>
    <columns>Client_Key__c</columns>
    <columns>Client_Token__c</columns>
    <filterScope>Everything</filterScope>
    <label>All w/End Points</label>
</ListView>